# metabuli-benchtools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: benchtools_to_mgsim.py  install-mgsim.sh
src/: Assembly.h  Parameters.cpp  Parameters.h  main.cpp
src/compat/: Debug.h  FastSort.h  FileUtil.cpp  FileUtil.h  MathUtil.h  StringBlock.h  Util.cpp  Util.h
src/taxonomy/: NcbiTaxonomy.cpp  NcbiTaxonomy.h  TaxonomyWrapper.cpp  TaxonomyWrapper.h
src/tools/: grade.cpp  gradeClassification.cpp  gradeCommon.h  gradeComposition.cpp  makeBenchmarkSet.cpp  makeInclusionQuerySet.cpp  sampleQueries.cpp  split.cpp
